language/move-lang/tests/move_check/parser/expr_return_missing_value.exp
error: 

   ┌── tests/move_check/parser/expr_return_missing_value.move:5:5 ───
   │
 5 │     }
   │     ^ Unexpected token: '}'
   ·
 5 │     }
   │     - Expected: 'move', 'copy', 'break', 'continue', '[Name]', '[Name<Types>]', '[Address]', 'true', 'false', '[U64]', '(', '{', '::'
   │

