language/move-lang/tests/move_check/parser/expr_return_missing_value.move
module M {
    fun f(v: u64) {
        // Check a return without the optional return value
        if (v > 100) return
    }
}
